fix section title on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -297,6 +297,9 @@ textarea {
 
 .section-title h3 {
   margin-bottom: 0;
+}
+
+.section-title #main-title {
   font-size: 30px;
 }
 
@@ -633,6 +636,10 @@ textarea {
 
   .event-details {
     font-size: 18px;
+  }
+
+  .section-title {
+    text-align: left;
   }
 
   h3 {
